--- a/colab_seaborn.ipynb
+++ b/colab_seaborn.ipynb
@@ -30,7 +30,8 @@
       "source": [
         "# Seaborn lab\n",
         "\n",
-        "## by Joanna Lankester, PhD\n",
+        "## assignment by Joanna Lankester, PhD\n",
+        "## completed by April Mariko Salazar\n",
         "## CS 48A\n",
         "\n",
         "Instructions: There are 26 numbered items; be sure to run them starting from the beginning so that the modules and variables you need will be available. Items with a * require an answer (code or response), while the remaining items only need to be run in order to make the project work.\n",
